calender section created

--- a/index.html
+++ b/index.html
@@ -1,13 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Furor</title>
+
+     <!-- FONT AWESOME -->
+     <script src="https://kit.fontawesome.com/272eed3989.js" crossorigin="anonymous"></script>
+
+     <!-- GOOGLE FONTS -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+     <!-- TAILWINDCSS OUTPUT -->
      <link href="/dist/output.css" rel="stylesheet">
 </head>
+
 <body>
-     
+     <!-- CALENDER SECTION -->
+     <section class="calender-section pt-20 pb-10 bg-white">
+          <div class="container">
+               <div class="text-center mb-5">
+                    <h2 class="text-5xl pb-2 text-black">Reserva tus plazas</h2>
+                    <h4 class="text-xl font-semibold text-yellow-500">Selecciona un dia y una actividad</h4>
+               </div>
+               <div class="flex pl-10 pb-5">
+                    <span class="text-lg mx-1 text-yellow-500"><i class="fa-solid fa-star"></i></span>
+                    <span class="text-lg mx-1 text-yellow-500"><i class="fa-solid fa-star"></i></span>
+                    <span class="text-lg mx-1 text-yellow-500"><i class="fa-solid fa-star"></i></span>
+                    <span class="text-lg mx-1 text-yellow-500"><i class="fa-solid fa-star"></i></span>
+                    <span class="text-lg mx-1 text-yellow-500"><i class="fa-solid fa-star"></i></span>
+               </div>
+               <div class="grid grid-cols-7 gap-3">
+                    <div class="item">
+                         <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
+                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h2 class="text-7xl font-semibold">16</h2>
+                              <p class="text-xs font-medium uppercase text-black">febrero</p>
+                         </div>
+                    </div>
+                    <div class="item">
+                         <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
+                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h2 class="text-7xl font-semibold">16</h2>
+                              <p class="text-xs font-medium uppercase text-black">febrero</p>
+                         </div>
+                    </div>
+                    <div class="item">
+                         <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
+                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h2 class="text-7xl font-semibold">16</h2>
+                              <p class="text-xs font-medium uppercase text-black">febrero</p>
+                         </div>
+                    </div>
+                    <div class="item -translate-y-5">
+                         <div class="p-3 flex-center flex-col text-center rounded-md bg-yellow-500 shadow-lg">
+                              <h4 class="text-xl font-medium text-white">Domingo</h4>
+                              <h2 class="text-7xl font-semibold">16</h2>
+                              <p class="text-xs font-medium uppercase text-black">febrero</p>
+                         </div>
+                         <div class="w-7 h-7 mx-auto my-2 triangle_path bg-yellow-500 shadow-lg"></div>
+                         <button class="px-4 py-2 rounded-2xl border border-black"><i class="fa-solid fa-calendar-days"></i> Calendario</button>
+                    </div>
+                    <div class="item">
+                         <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
+                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h2 class="text-7xl font-semibold">16</h2>
+                              <p class="text-xs font-medium uppercase text-black">febrero</p>
+                         </div>
+                    </div>
+                    <div class="item">
+                         <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
+                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h2 class="text-7xl font-semibold">16</h2>
+                              <p class="text-xs font-medium uppercase text-black">febrero</p>
+                         </div>
+                    </div>
+                    <div class="item">
+                         <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
+                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h2 class="text-7xl font-semibold">16</h2>
+                              <p class="text-xs font-medium uppercase text-black">febrero</p>
+                         </div>
+                    </div>
+               </div>
+          </div>
+     </section>
+     <!-- CALENDER SECTION END -->
 </body>
+
 </html>
