--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
      <!-- TAILWINDCSS OUTPUT -->
-     <link href="/dist/output.css" rel="stylesheet">
+     <link href="dist/output.css" rel="stylesheet">
 </head>
 
 <body>
