index section added

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 </head>
 
 <body>
-     <!-- CALENDER SECTION -->
-     <section class="calender-section pt-20 pb-10 bg-white">
+     <section class="calender-section pt-20 pb-10 bg-white shadow-lg relative z-50">
           <div class="container">
                <div class="text-center mb-5">
                     <h2 class="text-5xl pb-2 text-black">Reserva tus plazas</h2>
-                    <h4 class="text-xl font-semibold text-yellow-500">Selecciona un dia y una actividad</h4>
+                    <h4 class="font-semibold text-yellow-500">Selecciona un dia y una actividad</h4>
                </div>
                <div class="flex pl-10 pb-5">
                     <span class="text-lg mx-1 text-yellow-500"><i class="fa-solid fa-star"></i></span>
@@ -37,51 +36,52 @@
                <div class="grid grid-cols-7 gap-3">
                     <div class="item">
                          <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
-                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h4 class="font-medium text-neutral-500">Domingo</h4>
                               <h2 class="text-7xl font-semibold">16</h2>
                               <p class="text-xs font-medium uppercase text-black">febrero</p>
                          </div>
                     </div>
                     <div class="item">
                          <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
-                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h4 class="font-medium text-neutral-500">Domingo</h4>
                               <h2 class="text-7xl font-semibold">16</h2>
                               <p class="text-xs font-medium uppercase text-black">febrero</p>
                          </div>
                     </div>
                     <div class="item">
                          <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
-                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h4 class="font-medium text-neutral-500">Domingo</h4>
                               <h2 class="text-7xl font-semibold">16</h2>
                               <p class="text-xs font-medium uppercase text-black">febrero</p>
                          </div>
                     </div>
                     <div class="item -translate-y-5">
                          <div class="p-3 flex-center flex-col text-center rounded-md bg-yellow-500 shadow-lg">
-                              <h4 class="text-xl font-medium text-white">Domingo</h4>
+                              <h4 class="font-medium text-white">Domingo</h4>
                               <h2 class="text-7xl font-semibold">16</h2>
                               <p class="text-xs font-medium uppercase text-black">febrero</p>
                          </div>
                          <div class="w-7 h-7 mx-auto my-2 triangle_path bg-yellow-500 shadow-lg"></div>
-                         <button class="px-4 py-2 rounded-2xl border border-black"><i class="fa-solid fa-calendar-days"></i> Calendario</button>
+                         <button class="px-4 py-2 rounded-2xl bg-white text-black border border-black hover:bg-yellow-500 hover:text-white hover:border-yellow-500 animated"><i
+                                   class="fa-solid fa-calendar-days"></i> Calendario</button>
                     </div>
                     <div class="item">
                          <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
-                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h4 class="font-medium text-neutral-500">Domingo</h4>
                               <h2 class="text-7xl font-semibold">16</h2>
                               <p class="text-xs font-medium uppercase text-black">febrero</p>
                          </div>
                     </div>
                     <div class="item">
                          <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
-                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h4 class="font-medium text-neutral-500">Domingo</h4>
                               <h2 class="text-7xl font-semibold">16</h2>
                               <p class="text-xs font-medium uppercase text-black">febrero</p>
                          </div>
                     </div>
                     <div class="item">
                          <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
-                              <h4 class="text-xl font-medium text-neutral-500">Domingo</h4>
+                              <h4 class="font-medium text-neutral-500">Domingo</h4>
                               <h2 class="text-7xl font-semibold">16</h2>
                               <p class="text-xs font-medium uppercase text-black">febrero</p>
                          </div>
@@ -89,7 +89,106 @@
                </div>
           </div>
      </section>
-     <!-- CALENDER SECTION END -->
+
+     <section class="product-section pt-20 bg-white">
+          <div class="container">
+               <div class="flex rounded-md shadow-lg">
+                    <div class="w-1/2 p-20 bg-yellow-500 text-black rounded-l-md">
+                         <h2 class="text-5xl mb-5 font-semibold">La Gymkana</h2>
+                         <p class="text-xl capitalize">Noluisse similique te his sed consul vocent ex, has vero mandamus eam Noluisse similique te his sed.</p>
+                         <div class="flex-center justify-start my-6">
+                              <div class="flex mr-5">
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                              </div>
+                              <span class="text-lg">Popularidad</span>
+                         </div>
+                         <button class="p-3 text-sm font-semibold w-full uppercase rounded bg-white text-black hover:bg-black hover:text-white animated">reservar</button>
+                    </div>
+                    <div class="w-1/2 rounded-r-md">
+                         <img class="rounded-r-md h-full" src="images/item-1.png" alt="">
+                    </div>
+               </div>
+          </div>
+     </section>
+
+     <section class="product-section pt-12 bg-white">
+          <div class="container">
+               <div class="flex rounded-md shadow-lg">
+                    <div class="w-1/2 p-20 bg-yellow-500 text-black rounded-l-md">
+                         <h2 class="text-5xl mb-5 font-semibold">La Gymkana</h2>
+                         <p class="text-xl capitalize">Noluisse similique te his sed consul vocent ex, has vero mandamus eam Noluisse similique te his sed.</p>
+                         <div class="flex-center justify-start my-6">
+                              <div class="flex mr-5">
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                              </div>
+                              <span class="text-lg">Popularidad</span>
+                         </div>
+                         <button class="p-3 text-sm font-semibold w-full uppercase rounded bg-white text-black hover:bg-black hover:text-white animated">reservar</button>
+                    </div>
+                    <div class="w-1/2 rounded-r-md">
+                         <img class="rounded-r-md h-full" src="images/item-1.png" alt="">
+                    </div>
+               </div>
+          </div>
+     </section>
+
+     <section class="product-section pt-12 bg-white">
+          <div class="container">
+               <div class="flex rounded-md shadow-lg">
+                    <div class="w-1/2 p-20 bg-yellow-500 text-black rounded-l-md">
+                         <h2 class="text-5xl mb-5 font-semibold">La Gymkana</h2>
+                         <p class="text-xl capitalize">Noluisse similique te his sed consul vocent ex, has vero mandamus eam Noluisse similique te his sed.</p>
+                         <div class="flex-center justify-start my-6">
+                              <div class="flex mr-5">
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                              </div>
+                              <span class="text-lg">Popularidad</span>
+                         </div>
+                         <button class="p-3 text-sm font-semibold w-full uppercase rounded bg-white text-black hover:bg-black hover:text-white animated">reservar</button>
+                    </div>
+                    <div class="w-1/2 rounded-r-md">
+                         <img class="rounded-r-md h-full" src="images/item-1.png" alt="">
+                    </div>
+               </div>
+          </div>
+     </section>
+
+     <section class="product-section pt-12 bg-white">
+          <div class="container">
+               <div class="flex rounded-md shadow-lg">
+                    <div class="w-1/2 p-20 bg-yellow-500 text-black rounded-l-md">
+                         <h2 class="text-5xl mb-5 font-semibold">La Gymkana</h2>
+                         <p class="text-xl capitalize">Noluisse similique te his sed consul vocent ex, has vero mandamus eam Noluisse similique te his sed.</p>
+                         <div class="flex-center justify-start my-6">
+                              <div class="flex mr-5">
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                                   <span class="text-lg mx-1"><i class="fa-solid fa-star"></i></span>
+                              </div>
+                              <span class="text-lg">Popularidad</span>
+                         </div>
+                         <button class="p-3 text-sm font-semibold w-full uppercase rounded bg-white text-black hover:bg-black hover:text-white animated">reservar</button>
+                    </div>
+                    <div class="w-1/2 rounded-r-md">
+                         <img class="rounded-r-md h-full" src="images/item-1.png" alt="">
+                    </div>
+               </div>
+          </div>
+     </section>
 </body>
 
 </html>
