detials page added

--- a/details.html
+++ b/details.html
@@ -61,9 +61,12 @@
                               <h2 class="text-7xl font-bold">16</h2>
                               <p class="text-xs font-bold uppercase text-black">febrero</p>
                          </div>
-                         <div class="w-7 h-7 mx-auto my-2 triangle_path bg-yellow-500 shadow-lg"></div>
-                         <button class="px-4 py-2 rounded-2xl text-sm bg-white text-black border border-black hover:bg-yellow-500 hover:text-white hover:border-yellow-500 animated"><i
-                                   class="fa-solid fa-calendar-days"></i><span class="pl-2">Calendario</span></button>
+                         <div class="mt-2">
+                              <div class="w-7 h-7 mx-auto mt-2 triangle_path bg-yellow-500 shadow-lg"></div>
+                              <div class="w-full shadow-xl">
+
+                              </div>
+                         </div>
                     </div>
                     <div class="item">
                          <div class="p-3 flex-center flex-col text-center rounded-md bg-neutral-200 shadow-lg">
@@ -92,25 +95,32 @@
 
      <section class="product-section lg:pt-20 pt-10 bg-white">
           <div class="container">
-               <div class="flex flex-wrap shadow-lg">
-                    <div class="md:w-1/2 w-full lg:p-20 p-4 bg-yellow-500 text-black md:rounded-bl-md md:rounded-tr-none rounded-tl-md rounded-tr-md">
-                         <h2 class="lg:text-5xl md:text-3xl text-2xl lg:mb-5 mb-2 font-bold">La Gymkana</h2>
-                         <p class="lg:text-xl text-base capitalize">Noluisse similique te his sed consul vocent ex, has vero mandamus eam Noluisse similique te his sed.</p>
-                         <div class="flex-center justify-start lg:my-6 my-4">
-                              <div class="flex lg:mr-5 mr-2">
-                                   <span class="lg:text-lg text-sm lg:mx-1 mx-px"><i class="fa-solid fa-star"></i></span>
-                                   <span class="lg:text-lg text-sm lg:mx-1 mx-px"><i class="fa-solid fa-star"></i></span>
-                                   <span class="lg:text-lg text-sm lg:mx-1 mx-px"><i class="fa-solid fa-star"></i></span>
-                                   <span class="lg:text-lg text-sm lg:mx-1 mx-px"><i class="fa-solid fa-star"></i></span>
-                                   <span class="lg:text-lg text-sm lg:mx-1 mx-px"><i class="fa-solid fa-star"></i></span>
-                              </div>
-                              <span class="lg:text-lg text-sm">Popularidad</span>
+               <div class="flex flex-wrap shadow-xl">
+                    <div class="flex md:w-1/2 w-full text-black md:rounded-bl-md md:rounded-tr-none rounded-tl-md rounded-tr-md">
+                         <div class="w-14 h-full bg-yellow-500 flex flex-center md:rounded-bl-md md:rounded-tr-none rounded-tl-md">
+                              <div class="triangle_path -rotate-90 bg-white w-7 h-7 shadow-lg"></div>
                          </div>
-                         <a href="details.html" class="lg:p-3 p-2 text-sm font-bold w-full uppercase rounded bg-white text-black hover:bg-black hover:text-white animated">reservar</a>
+                         <div class="w-auto lg:px-12 px-4 py-4">
+                              <h2 class="lg:text-5xl md:text-3xl text-2xl lg:mb-5 lg:mb-2 font-normal">La Gymkana</h2>
+                              <p class="font-bold text-sky-700">Domingo 15 de Febero</p>
+                              <p class="font-bold text-red-700 lg:mt-4">Selecciona tu horario</p>
+                              <div class="grid grid-cols-2 lg:gap-x-8 gap-x-2 lg:gap-y-4 gap-y-2 lg:my-5 my-2">
+                                   <button class="lg:text-base text-sm lg:p-2 p-1 font-bold rounded text-black border-2 border-black hover:bg-yellow-500 hover:border-yellow-500 animated">De 17:30h a 19.30h</button>
+                                   <button class="lg:text-base text-sm lg:p-2 p-1 font-bold rounded text-black border-2 border-black hover:bg-yellow-500 hover:border-yellow-500 animated">De 17:30h a 19.30h</button>
+                                   <button class="lg:text-base text-sm lg:p-2 p-1 font-bold rounded text-black border-2 border-black hover:bg-yellow-500 hover:border-yellow-500 animated">De 17:30h a 19.30h</button>
+                                   <button class="lg:text-base text-sm lg:p-2 p-1 font-bold rounded text-black border-2 border-black hover:bg-yellow-500 hover:border-yellow-500 animated">De 17:30h a 19.30h</button>
+                                   <button class="lg:text-base text-sm lg:p-2 p-1 font-bold rounded text-black border-2 border-black hover:bg-yellow-500 hover:border-yellow-500 animated">De 17:30h a 19.30h</button>
+                                   <button class="lg:text-base text-sm lg:p-2 p-1 font-bold rounded text-black border-2 border-black hover:bg-yellow-500 hover:border-yellow-500 animated">De 17:30h a 19.30h</button>
+                              </div>
+                              <div class="flex flex-center">
+                                   <button class="md:w-4 md:h-4 w-3 h-3 mx-1 bg-white md:border-4 border-2 border-yellow-500 rounded-full"></button>
+                                   <button class="md:w-4 md:h-4 w-3 h-3 mx-1 bg-gray-500 md:border-4 border-2 border-white rounded-full"></button>
+                                   <button class="md:w-4 md:h-4 w-3 h-3 mx-1 bg-gray-500 md:border-4 border-2 border-white rounded-full"></button>
+                              </div>
+                         </div>
                     </div>
-                    <div class="md:w-1/2 w-full relative">
-                         <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-1.png" alt="">
-                         <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
+                    <div class="md:w-1/2 w-full">
+                         <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md w-full h-full" src="images/item-1.png" alt="">
                     </div>
                </div>
           </div>
@@ -189,6 +199,29 @@
                     <div class="md:w-1/2 w-full relative">
                          <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-1.png" alt="">
                          <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
+                    </div>
+               </div>
+          </div>
+     </section>
+
+     <section class="fixed bottom-0 left-0 right-0 w-full bg-yellow-500 p-4">
+          <div class="container">
+               <div class="flex justify-between items-center flex-wrap">
+                    <div class="md:w-auto w-full">
+                         <h4 class="lg:text-5xl md:text-3xl">La Gymkana</h4>
+                         <p class="text-red-700 font-bold lg:mt-2">Domingo 16 de Febero</p>
+                    </div>
+                    <div class="md:w-auto w-1/2 text-center">
+                         <h4 class="text-red-700 lg:text-5xl md:text-3xl font-bold">0</h4>
+                         <p class="text-black uppercase font-bold lg:mt-2">participantes</p>
+                    </div>
+                    <div class="md:w-auto w-1/2 text-center">
+                         <h4 class="text-red-700 lg:text-5xl md:text-3xl font-bold">0 &euro;</h4>
+                         <p class="text-black uppercase font-bold lg:mt-2">precio total</p>
+                    </div>
+                    <div class="md:w-auto w-full flex flex-col">
+                         <button class="lg:px-8 md:px-4 lg:py-2 py-1 mb-2 lg:text-base text-sm font-bold rounded uppercase bg-transparent text-gray-700 border border-gray-700 hover:text-black hover:bg-white hover:border-white hover:shadow-md animated">reservar</button>
+                         <button class="lg:px-8 md:px-4 lg:py-2 py-1 lg:text-base text-sm font-bold rounded uppercase bg-transparent text-gray-700 border border-gray-700 hover:text-black hover:bg-white hover:border-white hover:shadow-md animated">cancelar</button>
                     </div>
                </div>
           </div>
