project path changed

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                               <a href="details.html" class="sl-btn bg-white text-black hover:bg-black hover:text-white">reservar</a>
                          </div>
                          <div class="md:w-1/2 w-full relative">
-                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-1.png" alt="">
+                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="src/images/item-1.png" alt="">
                               <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
                          </div>
                     </div>
@@ -136,7 +136,7 @@
                               <button class="sl-btn bg-white text-black hover:bg-black hover:text-white">reservar</button>
                          </div>
                          <div class="md:w-1/2 w-full relative">
-                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-2.png" alt="">
+                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="/src/images/item-2.png" alt="">
                               <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
                          </div>
                     </div>
@@ -162,7 +162,7 @@
                               <button class="sl-btn bg-white text-black hover:bg-black hover:text-white sl-animated">reservar</button>
                          </div>
                          <div class="md:w-1/2 w-full relative">
-                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-3.png" alt="">
+                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="/src/images/item-3.png" alt="">
                               <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
                          </div>
                     </div>
@@ -188,7 +188,7 @@
                               <button class="sl-btn bg-white text-black hover:bg-black hover:text-white">reservar</button>
                          </div>
                          <div class="md:w-1/2 w-full relative">
-                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-1.png" alt="">
+                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="/src/images/item-1.png" alt="">
                               <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
                          </div>
                     </div>
