--- a/details.html
+++ b/details.html
@@ -124,7 +124,7 @@
                               </div>
                          </div>
                          <div class="md:w-1/2 w-full">
-                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md w-full h-full" src="images/item-1.png" alt="">
+                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md w-full h-full" src="/src/images/item-1.png" alt="">
                          </div>
                     </div>
                </div>
@@ -149,7 +149,7 @@
                               <button class="sl-btn bg-white text-black hover:bg-black hover:text-white">reservar</button>
                          </div>
                          <div class="md:w-1/2 w-full relative">
-                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-2.png" alt="">
+                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="/src/images/item-2.png" alt="">
                               <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
                          </div>
                     </div>
@@ -175,7 +175,7 @@
                               <button class="sl-btn bg-white text-black hover:bg-black hover:text-white sl-animated">reservar</button>
                          </div>
                          <div class="md:w-1/2 w-full relative">
-                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-3.png" alt="">
+                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="/src/images/item-3.png" alt="">
                               <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
                          </div>
                     </div>
@@ -201,7 +201,7 @@
                               <button class="sl-btn bg-white text-black hover:bg-black hover:text-white">reservar</button>
                          </div>
                          <div class="md:w-1/2 w-full relative">
-                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="images/item-1.png" alt="">
+                              <img class="md:rounded-tr-md md:rounded-bl-none rounded-br-md rounded-bl-md h-full" src="/src/images/item-1.png" alt="">
                               <button class="absolute bottom-4 right-4 text-white underline text-xs">Saber Mas</button>
                          </div>
                     </div>
